Refactor project structure and use cobra

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - AWS_REGION=us-east-1
     volumes:
       - ./config.yml:/app/config.yml
-    entrypoint: ["/localstack-quickstart", "-config=config.yml"]
+    entrypoint: ["/localstack-quickstart", "init", "--config=config.yml"]
     networks:
       - localstack
   localstack:
